--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -15,11 +15,12 @@
 
 <body class="overflow-x hidden">
 
+
     <!-- Navbar section -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-lg">
-            <a class="navbar-brand" href="#"><img src="{% static 'images/svg-icons/logo.svg' %}" alt="Logo" width="150"
-                    height="35"></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/svg-icons/logo.svg' %}"
+                    alt="Logo" width="150" height="35"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -30,24 +31,26 @@
                     <li class="nav-item">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Detect your location">
-                            <span class="input-group-text"><img src="{% static 'images/svg-icons/detect-location.svg' %}"></span>
+                            <span class="input-group-text"><img
+                                    src="{% static 'images/svg-icons/detect-location.svg' %}"></span>
                         </div>
                     </li>
                 </ul>
-                <div>
-                    <button class="btn btn-outline-success" type="submit">Login</button>
-                    <button class="btn btn-outline-success">Register</button>
-                </div>
+                {% block navbar %}
+
+                {% endblock %}
             </div>
         </div>
     </nav>
 
+
+    <!-- Load content here -->
     {% block body %}
-    
+
     {% endblock %}
 
 
-   
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
