user login, vendor registration, email_activation link, user dashboard, vendor dashboard

--- a/feastrove/static/css/styles.css
+++ b/feastrove/static/css/styles.css
@@ -42,3 +42,8 @@
 .my-search {
     background-color: #F17228;
 }
+
+.form-control-lg::placeholder {
+    font-size: 1.2rem; /* Adjust this value as needed */
+    color: #888; /* Optional: Change placeholder color */
+}
