--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -44,7 +44,7 @@
     </nav>
 
 
-    <!-- Load content here -->
+    <!-- Main content here -->
     {% block body %}
 
     {% endblock %}
@@ -56,6 +56,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    {% block extra_js %}
+
+    {% endblock %}
 
 </body>
 
