forgot password setup, improved form validation, added validators in user model

--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -1,6 +1,9 @@
 {% extends 'base_layouts/base.html' %}
 
 {% block navbar %}
+    <a href="{% url 'login' %}">
+        <button type="button" class="btn btn-outline-success">Login</button>
+    </a>
     <a href="{% url 'registerUser' %}">
         <button type="button" class="btn btn-outline-success">Register</button>
     </a>
@@ -17,23 +20,19 @@
                 </div>
                 {% endfor %}
                 {% endif %}
-                <form class="d-flex flex-column row-gap-3 p-4" action="{% url 'login' %}" method='POST'>
+                <form class="d-flex flex-column row-gap-3 p-4" action="{% url 'forgotPassword' %}" method='POST'>
                     {% csrf_token %}
-                    <h1 class="h3 mb-3 fw-bold text-center mt-3">Log In To Your Account</h1>
+                    <h1 class="h3 mb-3 fw-bold text-center mt-3">Forgot Your Password</h1>
 
                     <div class="form-floating">
                         <input class="form-control form-control-lg" name="email" type="email" placeholder="Enter your email"
                             required>
-                        <label for="username">Email Address</label>
+                        <label for="email">Email</label>
                     </div>
 
-                    <div class="form-floating">
-                        <input class="form-control form-control-lg" name="password" type="password" required>
-                        <label for="password">Your password</label>
-                    </div>
 
                     <div class="d-flex justify-content-center mt-3">
-                        <button class="btn btn-outline-success btn-lg py-2 w-50 fw-bold" type="submit">LOG IN</button>
+                        <button class="btn btn-outline-success btn-lg py-2 w-50 fw-bold" type="submit">Continue</button>
                     </div>
 
                     {% if message %}
@@ -44,12 +43,7 @@
                     </div>
                     {% endif %}
 
-                    <p class="text-center text-muted mt-4 mb-0">Don't have an account?
-                        <a href="{% url 'registerUser' %}" class="fw-bold text-body"><u>Register here</u></a>
-                    </p>
-                    <p class="text-center text-muted mt-1 mb-0">
-                        <a href="{% url 'forgotPassword' %}" class="fw-bold text-body"><u>Forgot Password</u></a>
-                    </p>
+        
                 </form>
             </div>
         </div>
