--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,1 +1,12 @@
 {% load static %}
+<li class="nav-item">
+    <a class="nav-link active text-white fw-bold" aria-current="page" href="{% url 'adminCustomerData' %}">Customers</a>
+</li>
+
+<li class="nav-item">
+    <a class="nav-link active text-white fw-bold" aria-current="page" href="{% url 'adminVendorData' %}">Vendors</a>
+</li>
+
+<li class="nav-item">
+    <a class="nav-link active text-white fw-bold" aria-current="page" href="{% url 'adminVendorApprove' %}">Approve vendor</a>
+</li>
