--- a/templates/base_layouts/home.html
+++ b/templates/base_layouts/home.html
@@ -3,7 +3,10 @@
 
 {% block navbar %}
     <div>
-        {% if user.is_authenticated %}
+        {% if user.is_superadmin %}
+        <a href="{% url 'myAccount' %}"><button class="btn btn-outline-success" type="submit">Admin Dashboard</button></a>
+        <a href="{% url 'logout' %}"><button class="btn btn-outline-success">Logout</button></a>
+        {% elif user.is_authenticated %}
         <a href="{% url 'myAccount' %}"><button class="btn btn-outline-success" type="submit">My Account</button></a>
         <a href="{% url 'logout' %}"><button class="btn btn-outline-success">Logout</button></a>
         {% else %}
