--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -6,10 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FeastRove</title>
+    {% block extra_head %}
+    {% endblock %}
     <link rel="icon" type="image/svg+xml" href="{% static 'images/svg-icons/favicon.svg' %}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
+       
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 
@@ -31,9 +35,10 @@
                     {% if user.is_superadmin %}
                     
                     {% include 'includes/navbar.html' %}
+
                    
                     {% else %}
-                    <li class="nav-item">
+                    <li class="list-unstyled nav-item">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Detect your location">
                             <span class="input-group-text"><img
@@ -49,6 +54,8 @@
         </div>
     </nav>
 
+    <!-- Modal content here -->
+    {% include 'includes/modal.html' %}
 
     <!-- Main content here -->
     {% block body %}
@@ -65,6 +72,18 @@
     {% block extra_js %}
 
     {% endblock %}
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // Check if there's a success message (from Django)
+            {% if messages %}
+            var myModal = new bootstrap.Modal(document.getElementById('staticBackdrop'), {
+                keyboard: false
+            });
+            myModal.show();
+            {% endif %}
+        });
+    </script>
 
 </body>
 
