--- a/templates/includes/vendorCover.html
+++ b/templates/includes/vendorCover.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="page-section restaurant-detail-image-section" style=" background: url({{ vendor.user_profile.cover_photho.url }}) no-repeat scroll 0 0 / cover;">
+<div class="page-section restaurant-detail-image-section" style=" background: url({% if vendor.user_profile.cover_photho %}{{ vendor.user_profile.cover_photho.url }}{% endif %}) no-repeat scroll 0 0 / cover;">
     <!-- Container Start -->
     <div class="container">
         <!-- Row Start -->
@@ -10,7 +10,7 @@
                     <div class="company-info">
                         <div class="img-holder">
                             <figure>
-                                <img src="{{ vendor.user_profile.profile_picture.url }}" alt="">
+                                <img src="{% if vendor.user_profile.profile_picture %} {{ vendor.user_profile.profile_picture.url }} {% endif %}" alt="">
                             </figure>
                         </div>
 
