--- a/templates/includes/vendorSidebar.html
+++ b/templates/includes/vendorSidebar.html
@@ -4,10 +4,10 @@
         <ul>
             <li class="{% if '/accounts/vendor/Dashboard/' == request.path or '/accounts/vendor/' == request.path %} active {% endif %}"><a href="{% url 'vendorDashboard' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
             <li class="{% if 'profile' in request.path %} active {% endif %}"><a href="{% url 'vendorProfile' %}"><i class="icon-building"></i>My Restaurant</a></li>
-            <li><a href="restaurant-menu-builder.html"><i class="icon-menu5"></i>Menu Builder</a></li>
+            <li class="{% if 'menu-builder' in request.path %} active {% endif %}"><a href="{% url 'vendorMenuBuilder' %}"><i class="icon-menu5"></i>Menu Builder</a></li>
             <li><a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a></li>
             <li><a href="restaurant-earnings.html"><i class="icon-money"></i>Earnings</a></li>
-            <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Statement</a></li>
+            <li><a href="restaurant-statement.html"><i class="icon-file-text22"></i>Opening Hours</a></li>
             <li><a href="restaurant-change-password.html"><i class="icon-unlock-alt"></i>Change Password</a></li>
             <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
         </ul>
