--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -15,9 +15,12 @@
     
        
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 </head>
 
-<body class="overflow-x hidden">
+<body class="overflow-x hidden bg-white">
 
 
     <!-- Navbar section -->
@@ -47,6 +50,15 @@
                     </li>
                     {% endif %}
                 </ul>
+
+                <div class="mx-3">
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'cart' %}"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#FFFFFF" class="bi bi-cart" viewBox="0 0 16 16">
+                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                      </svg><span class="badge rounded-pill text-bg-light p-1 position-relative" id="cart_counter" style="bottom: 10px;">{{ cart_count }}</span></a>
+                    {% endif %}
+                </div>
+                
                 {% block navbar %}
 
                 {% endblock %}
@@ -69,6 +81,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+  
     {% block extra_js %}
 
     {% endblock %}
@@ -84,6 +97,69 @@
             {% endif %}
         });
     </script>
+
+ 
+<script>
+
+    jQuery(document).ready(function(){
+        jQuery('.add_to_cart').on('click', function(e){
+            e.preventDefault();
+            
+            food_id = $(this).attr('data-id');
+            url = $(this).attr('data-url');
+            data = {
+                food_slug: food_id,
+            }
+            $.ajax({
+                type:'GET',
+                url: url,
+                data:data,
+                success: function(response){
+                    //console.log(response.cart_counter['cart_count']);
+                    if (response.status == 'login_required'){
+                        
+                        Swal.fire({
+                            title: "Please Login to continue?",
+                            icon: "info",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Login Now!"
+                          }).then((result) => {
+                            if (result.isConfirmed) {
+                              window.location = '/accounts/login';
+                            }
+                          });
+
+                    }else if (response.status == 'Success'){
+                        $('#cart_counter').html(response.cart_counter['cart_count']);
+
+                     
+                        Swal.fire({
+                            title: response.message,
+                            icon: "success",
+                            showCancelButton: true,
+                            confirmButtonColor: "#3085d6",
+                            cancelButtonColor: "#d33",
+                            confirmButtonText: "Go to Cart"
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                window.location = '/marketplace/cart';
+                            }
+                        })
+
+                    }else{
+                        Swal.fire({
+                            title: response.message,
+                            icon: "error",
+                        })
+                    }
+                }
+            })
+        })
+    });
+
+</script>
 
 </body>
 
