--- a/templates/base_layouts/home.html
+++ b/templates/base_layouts/home.html
@@ -45,4 +45,85 @@
             </div>
         </div>
     </section>
+
+<div class="container-fluid mx-0 px-0 shadow" style="background: #FFFDF5;">
+    <div class="container py-5">
+        <h2 class="text-center mb-4">Featured Restaurants 
+            <a href="#" class="text-decoration-none"><img class="float-end" src={% static 'images/svg-icons/caret-right-fill.svg' %}></a>
+            <a href="#" class="text-decoration-none"><img class="float-end" src={% static 'images/svg-icons/caret-left-fill.svg' %}></a>
+            
+        </h2>
+        
+        <div class="row">
+            <!-- Loop through restaurants -->
+            {% for restaurant in restaurants %}
+                <div class="col-md-4 col-sm-6 col-lg-3 mb-4">
+                    <div class="card h-100 shadow-sm">
+                        <!-- Restaurant Profile Picture -->
+                        <img src="{% if restaurant.user_profile.profile_picture %} {{ restaurant.user_profile.profile_picture.url }}{% else %} {% static 'images/default/profile.png' %} {% endif %}" class="card-img-top" alt="{{ restaurant.vendor_name }} Profile Picture" style="height: 200px; object-fit: cover;">
+    
+                        <!-- Restaurant Info -->
+                        <div class="card-body">
+                            <h5 class="card-title">{{ restaurant.vendor_name }}</h5>
+                            <!-- Additional Info (Optional) -->
+                            <p class="card-text text-muted text-capitalize">{% if restaurant.user_profile.city %} {{ restaurant.user_profile.city }} {% else %} No data {% endif %}</p>
+                            <div class="d-flex justify-content-between">
+                                <a href={% url 'restaurantDetails' restaurant.vendor_slug %} class="stretched-link btn btn-success btn-sm">View Restaurant</a>
+                            </div>
+                        </div>
+    
+                       
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <a class="text-decoration-none" href="{% url 'marketplace' %}"><p class="text-center text-feastrove">View all <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-double-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708"/>
+            <path fill-rule="evenodd" d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708"/>
+          </svg></p></a>
+    </div>
+</div>
+
+<!-- Featured food section -->
+<div class="container-fluid mx-0 px-0 my-4 shadow" style="background: #FFFDF5;">
+    <div class="container py-5">
+        <h2 class="text-center mb-4">Featured Foods</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+
+            {% if food_items %}
+                {% for item in food_items %}
+                <div class="col">
+                    <div class="card shadow-sm rounded">
+                        
+                        {% if item.is_available %}
+                        <a href="{% url 'foodItemDetails' item.slug %}"><img src="{{ item.image.url }}" class="card-img-top" alt="..." height="250px" width="200px">
+                        <span class="badge bg-success position-absolute top-0 start-0 m-2">Available</span></a>
+                        {% else %}
+                        <img src="{{ item.image.url }}" class="card-img-top" alt="..." height="250px" width="200px" style="filter: grayscale(100%);">
+                        <span class="badge bg-danger position-absolute top-0 start-0 m-2">Not Available</span>
+                        {% endif %}
+                        <div class="card-body">
+                            <h3 class="card-text">{{ item.food_title }}</h3>
+                            <h6 class="card-text"> {{ item.vendor.vendor_name }}</h6>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h6 class="text-body-secondary font-weight-bold"><strong>₹{{ item.price }}</strong></h6>
+                                <div class="btn-group">
+                                    <a href="#"><button type="button" class="btn btn-sm btn-outline-success add_to_cart" data-id="{{ item.slug }}" data-url="{% url 'addToCart' item.slug %}">Add To Cart</button></a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+                {% else %}
+                <h4 class="text-center">No food Items Found</h4>
+                {% endif %}
+
+        </div>
+
+    </div>
+</div>
+    
+
 {% endblock %}
