--- a/templates/includes/customerSidebar.html
+++ b/templates/includes/customerSidebar.html
@@ -2,11 +2,11 @@
 <div class="user-account-nav user-account-sidebar">
     <div class="user-nav-list">
         <ul>
-            <li class="active"><a href="restaurant-dashboard.html"><i class="icon-dashboard3"></i>Dashboard</a></li>
-            <li><a href="restaurant-restaurant.html"><i class="icon-add_shopping_cart"></i>My Orders</a></li>
-            <li><a href="restaurant-menu-builder.html"><i class="icon-build"></i>Settings</a></li>
-            <li><a href="restaurant-orders.html"><i class="icon-unlock-alt"></i>Orders</a></li>
-            <li><a class="logout-btn" href="registration.html"><i class="icon-log-out"></i>Signout</a></li>
+            <li class="{% if '/accounts/customer/Dashboard/' == request.path or '/accounts/customer/' == request.path %} active {% endif %}"><a href="{% url 'customer' %}"><i class="icon-dashboard3"></i>Dashboard</a></li>
+            <li class="{% if 'profile/' in request.path %} active {% endif %}"><a href="{% url 'customerProfile' %}"><i class="icon-build"></i>Profile</a></li>
+            <li><a href="#"><i class="icon-add_shopping_cart"></i>Settings</a></li>
+            <li><a href="#"><i class="icon-unlock-alt"></i>Orders</a></li>
+            <li><a class="logout-btn" href="{% url 'logout' %}"><i class="icon-log-out"></i>Signout</a></li>
         </ul>
     </div>
 </div>
