--- a/feastrove/static/css/styles.css
+++ b/feastrove/static/css/styles.css
@@ -74,3 +74,64 @@
 .text-feastrove-dark:hover{
     color: #FFB30E;
 }
+
+
+
+.payment-option {
+    border: 1px solid transparent;
+    border-radius: 5px;
+    padding: 0px;
+    cursor: pointer;
+    transition: border-color 0.3s;
+}
+
+/* Highlight the selected option */
+.payment-option input[type="radio"]:checked + label {
+    border: 2px solid #F17228;  
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #dddd; 
+}
+
+/* Hover effect to give user feedback */
+.payment-option:hover {
+    background-color: #ddd; 
+}
+
+
+/***************************************************
+Spinner or loader
+***************************************************/
+
+/* Full screen spinner with white background */
+#spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(239, 239, 239); /* Solid white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Make sure it's above everything else */
+}
+
+
+#spinner-overlay p {
+    font-size: 1.2rem;  /* Slightly larger text */
+    color: #333;        /* Darker color for the message */
+}
+
+/* Blur only the content, not the spinner */
+.blur-background #content-wrapper {
+    filter: blur(5px);
+    pointer-events: none; /* Prevent interaction with blurred content */
+}
+
+
+
+/* Ensure that the body doesn't scroll while the spinner is active */
+body.no-scroll {
+    overflow: hidden;
+}
