--- a/templates/customer/customerEditAddress.html
+++ b/templates/customer/customerEditAddress.html
@@ -42,7 +42,7 @@
 
 
 
-                            <h2>Add a New Address</h2>
+                            <h2>Update Address</h2>
 
                             <div class="my-2">
                                 <button class="btn btn-secondary btn-sm" type="button" onclick="history.back()"><svg
