--- a/templates/customer/profile.html
+++ b/templates/customer/profile.html
@@ -102,7 +102,7 @@
 														<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 d-md-flex gap-2">
 															<div class="field-holder">
 																<label>country</label>
-																<input type="text" value="India" class="foodbakery-dev-req-field">
+																<input type="text" id="id_country" value="India" class="foodbakery-dev-req-field">
 															</div>
 															<div class="field-holder">
 																<label>State *</label>
