--- a/templates/orders/placeOrder.html
+++ b/templates/orders/placeOrder.html
@@ -97,6 +97,7 @@
                                 </div>
                                 <span class="fw-bold" id="grand_total">₹{{ grand_total }}</span>
                             </li>
+                            {% if order.payment_method == 'paypal' %}
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0">
                                 <div>
                                     <strong>Total amount</strong>
@@ -106,6 +107,7 @@
                                 </div>
                                 <span class="fw-bold">${{ usd_amount }}</span>
                             </li>
+                            {% endif %}
                             <hr class="mt-0">
 
 
@@ -121,6 +123,10 @@
                             <button class="btn btn-success" id="rzp-button1">Pay with Razorpay</button>
                             <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
                         </div>
+                        {% elif order.payment_method == 'cod' %}
+                        <div id="cod-place-order-button">
+                            <button class="btn btn-success" id="cod-button">Place order</button>
+                        </div>
                         {% endif %}
 
                     </div>
@@ -134,7 +140,7 @@
 
 {% block extra_js %}
 
-
+{% if not order.payment_method == 'cod' %}
 <script>
 
     // using jQuery
@@ -256,6 +262,8 @@
     {% endif %}
 
 
+
+
     // Send the data to payments view to store in the database
     function sendTransaction(transactionId, payment_method, status) {
         $.ajax({
@@ -275,6 +283,62 @@
         })
     }
 </script>
+
+{% endif %}
+
+
+{% if order.payment_method == 'cod' %}
+<script>
+
+     // using jQuery
+     function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie != '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = jQuery.trim(cookies[i]);
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+
+    // Extract grand total from the server-side template
+    var order_number = "{{ order.order_number }}";
+    var csrftoken = getCookie('csrftoken');
+    var order_complete = "{% url 'orderComplete' %}";
+    var url = "{% url 'paymentsCod' %}";
+
+    jQuery(document).ready(function(){
+        $('#cod-button').on('click', function(e){
+            e.preventDefault();
+            $('#spinner-overlay').removeClass('d-none');
+            $('#content-wrapper').addClass('blur-background');
+            $('body').addClass('no-scroll');
+            $.ajax({
+                type: 'POST',
+                url: url,
+                data: {
+                    'order_number': order_number,
+                    'payment_method': "cod",
+                    'status': "Success",
+                    'csrfmiddlewaretoken': csrftoken
+                },
+                success: function (response) {
+                    window.location.href= order_complete + '?order-no='+response.order_number
+                }
+            })
+             
+        })
+    })
+
+</script>
+{% endif %}
 
 
 
