postgis setup, GDAL setup, added location point field in userprofile, implemented search functionalities for the customer and to show nearby restaurant

--- a/templates/base_layouts/base.html
+++ b/templates/base_layouts/base.html
@@ -20,10 +20,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     {% comment %} <script src="https://maps.googleapis.com/maps/api/js?key={{google_api_key}}&libraries=places&callback=initAutoComplete" async defer></script> {% endcomment %}
-
+    {% if '/profile/' in request.path or request.path == '/'  %}
     <script async
     src="https://maps.googleapis.com/maps/api/js?key={{google_api_key}}&loading=async&libraries=places&callback=initAutoComplete">
 </script>
+    {% endif %}
 
     <script src="{% static 'javascript/custom.js' %}"></script>
 </head>
